<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/calcBox"
        android:text="@string/default_text"
        android:textSize="@dimen/btn_textSizecalc"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/result_box"
        android:layout_margin="@dimen/btn_layoutMargin">

    </TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_box"
        android:text="@string/default_text"
        android:textSize="@dimen/btn_textSize"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/buttons_layout"
        android:layout_margin="@dimen/btn_layoutMargin">

    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttons_layout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_leftParentheses"
                android:text="@string/left_parentheses"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_rightParentheses"
                android:text="@string/right_parentheses"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_division"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/gray"
                android:text="@string/division"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_del"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/teal_200"
                android:text="@string/del"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_multitextSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_7"
                android:text="@string/button_7"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_8"
                android:text="@string/button_8"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_9"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/teal_200"
                android:text="@string/button_9"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_minus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/gray"
                android:text="@string/button_minus"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_4"
                android:text="@string/button_4"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_5"
                android:text="@string/button_5"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_6"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/teal_200"
                android:text="@string/button_6"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_plus"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/gray"
                android:text="@string/button_plus"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_1"
                android:text="@string/button_1"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_2"
                android:text="@string/button_2"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_3"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/teal_200"
                android:text="@string/button_3"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_multi"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/gray"
                android:text="@string/button_multi"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_C"
                android:text="@string/button_C"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                app:cornerRadius="@dimen/btn_radius"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@color/black"
                android:backgroundTint="@color/teal_200"
                android:id="@+id/button_0"
                android:text="@string/button_0"
                >


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_dot"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/teal_200"
                android:text="@string/button_dot"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_equal"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:layout_width="@dimen/btn_size"
                android:layout_height="@dimen/btn_size"
                android:backgroundTint="@color/gray"
                android:text="@string/button_equal"
                android:textColor="@color/black"
                android:textSize="@dimen/btn_textSize"
                app:cornerRadius="@dimen/btn_radius">


            </com.google.android.material.button.MaterialButton>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>